--- a/scores/score_child.html
+++ b/scores/score_child.html
@@ -14,8 +14,8 @@ title: Unité de Transplantation Hépatique - Score Child Pugh
       <fieldset>
         <legend>Ascite</legend>
         <input type="radio" name="ascite" value="low" id="low_ascite"><label for="low_ascite"><span><span></span></span>Absente</label>
-        <input type="radio" name="ascite" value="mid" id="mid_ascite"><label for="mid_ascite"><span><span></span></span>Minime</label>
-        <input type="radio" name="ascite" value="high" id="high_ascite"><label for="high_ascite"><span><span></span></span>Modérée</label>
+        <input type="radio" name="ascite" value="mid" id="mid_ascite"><label for="mid_ascite"><span><span></span></span>Modérée</label>
+        <input type="radio" name="ascite" value="high" id="high_ascite"><label for="high_ascite"><span><span></span></span>Importante</label>
       </fieldset>
       <fieldset>
         <legend>Bilirubine totale (&micro;mol/L)</legend>
