--- a/scores/score_lille.html
+++ b/scores/score_lille.html
@@ -35,6 +35,6 @@ title: Unité de Transplantation Hépatique - Score Lille
     Score
     <div id="result"></div>
     </div>
-<p>Reference: Louvet A. et al, Hepatology 2007;45:1348-54</p>
+<p class="ref">Reference: Louvet A. et al, Hepatology 2007;45:1348-54</p>
   </div>
 </div>
