--- a/scores/score_hepatite_fulminante.html
+++ b/scores/score_hepatite_fulminante.html
@@ -13,7 +13,7 @@ title: Unité de Transplantation Hépatique - Score Hépatite fulminante
 	<legend>Etiologie</legend>
         <input type="radio" name="etio" value="paracetamol" id="paracetamol_etio"><label for="paracetamol_etio"><span><span></span></span>Paracetamol</label>
         <input type="radio" name="etio" value="medoc" id="medoc_etio"><label for="medoc_etio" ><span><span></span></span>Médicament hors paracetamol</label>
-        <input type="radio" name="etio" value="other" id="other_etio"><label for="other_etio"><span><span></span></span>Autre</label>
+        <input type="radio" name="etio" value="other" id="other_etio"><label for="other_etio" style="margin-left: 20px"><span><span></span></span>Autre</label>
         <input type="radio" name="etio" value="unknown" id="unknown_etio"><label for="unknown_etio"><span><span></span></span>Indeterminé</label>
       </fieldset>
       <fieldset>
@@ -23,7 +23,7 @@ title: Unité de Transplantation Hépatique - Score Hépatite fulminante
       </fieldset>
       <fieldset>
         <legend>Délai ictère-encéphalopathie</legend>
-        <input type="radio" name="delai" value="low" id="low_delai"><label for="low_delai"><span><span></span></span>&lte;7 jours</label>
+        <input type="radio" name="delai" value="low" id="low_delai"><label for="low_delai"><span><span></span></span>&le; 7 jours</label>
         <input type="radio" name="delai" value="mid" id="mid_delai"><label for="mid_delai"><span><span></span></span>&gt; 7 jours</label>
       </fieldset>
       <fieldset>
@@ -36,11 +36,11 @@ title: Unité de Transplantation Hépatique - Score Hépatite fulminante
       </fieldset>
       <fieldset>
         <legend>Bilirubine</legend>
-        <input type="text" name="bili" id="bili"><label for="bili">micromol/L</label>
+        <input type="text" name="bili" id="bili"><label for="bili">&micro;mol/L</label>
       </fieldset>
       <fieldset>
         <legend>Créatinine</legend>
-        <input type="text" name="creat" id="creat"><label for="creat">micromol/L</label>
+        <input type="text" name="creat" id="creat"><label for="creat">&micro;mol/L</label>
       </fieldset>
       <fieldset>
         <legend>PH artériel</legend>
@@ -52,11 +52,12 @@ title: Unité de Transplantation Hépatique - Score Hépatite fulminante
       </fieldset>
       <input type="submit" value="Calculer">
     </form>
-    <div class="score">
+    <div class="score" style="width: 100%;min-height: 2em;padding-top:10px"><p style="font-weight: bold;">Indications de greffe</p></div>
+    <div class="score" style="min-width:50%;">
     Selon Clichy-Beaujon
     <div id="result_clichy"></div>
     </div>
-    <div class="score">
+    <div class="score" style="min-width:50%;">
     Selon King's College
     <div id="result_kings"></div>
     </div>
