--- a/scores/score_hers.html
+++ b/scores/score_hers.html
@@ -9,13 +9,13 @@ title: Unité de Transplantation Hépatique - HCC Explant Recurrence Score
         <legend for="color">Nombre de nodules</legend>
         <input type="radio" name="number" value="low" id="low_number"><label for="low_number"><span><span></span></span>1-3</label>
         <input type="radio" name="number" value="mid" id="mid_number"><label for="mid_number"><span><span></span></span>4</label>
-        <input type="radio" name="number" value="high" id="high_number"><label for="high_number"><span><span></span></span>&gte;5</label>
+        <input type="radio" name="number" value="high" id="high_number"><label for="high_number"><span><span></span></span>&ge; 5</label>
       </fieldset>
       <fieldset>
         <legend for="size">Diamètre maximal du plus gros nodule (mm)</legend>
-        <input type="radio" name="size" value="low" id="low_size"><label for="low_size"><span><span></span></span>&#8804;30</label>
+        <input type="radio" name="size" value="low" id="low_size"><label for="low_size"><span><span></span></span>&#8804; 30</label>
         <input type="radio" name="size" value="mid" id='mid_size'><label for="mid_size"><span><span></span></span>31-60</label>
-        <input type="radio" name="size" value="high"id="high_size"><label for="high_size"><span><span></span></span>&gt;60</label>
+        <input type="radio" name="size" value="high"id="high_size"><label for="high_size"><span><span></span></span>&gt; 60</label>
       </fieldset>
       <fieldset>
         <legend for="tumor">Extension tumorale</legend>
@@ -29,10 +29,13 @@ title: Unité de Transplantation Hépatique - HCC Explant Recurrence Score
       <input type="submit" value="Calculer">
      </fieldset>
     </form>
-    <div class="score">
-    Probabilite de recidive a 1, 3, 5 ans
-    <div id="result"></div>
+    <div class="score" style="width: 100%;min-height: 2em;padding-top:10px">
+      <p style="font-weight: bold;">Probabilité de récidive</p>
+      <table class="table">
+        <tr><th>Score</th><th>1 ans</th><th>3 ans</th><th>5 ans</th></tr>
+        <tr><td id='result'></td><td id='result_1'></td><td id='result_3'></td><td id='result_5'></td></tr>
+      </table>
     </div>
-<p>Reference Costentin C. et al, 2016</p>
+<p class='ref'>Reference Costentin C. et al, 2016</p>
   </div>
 </div>
