--- a/scores/score_child.html
+++ b/scores/score_child.html
@@ -31,9 +31,9 @@ title: Unité de Transplantation Hépatique - Score Child Pugh
       </fieldset>
       <fieldset>
         <legend>Taux de prothrombine (%)</legend>
-        <input type="radio" name="proth" value="low" id="low_proth"><label for="low_proth"><span><span></span></span>&lt;40</label>
+        <input type="radio" name="proth" value="high" id="high_proth"><label for="high_proth"><span><span></span></span>&lt;40</label>
         <input type="radio" name="proth" value="mid" id="mid_proth"><label for="mid_proth"><span><span></span></span>40 à 50</label>
-          <input type="radio" name="proth" value="high" id="high_proth"><label for="high_proth"><span><span></span></span>&gt;50</label>
+          <input type="radio" name="proth" value="low" id="low_proth"><label for="low_proth"><span><span></span></span>&gt;50</label>
       </fieldset>
       <input type="submit" value="Calculer">
     </form>
