Minor fixes after meetup

--- a/scores/score_hers.html
+++ b/scores/score_hers.html
@@ -32,10 +32,10 @@ title: Unité de Transplantation Hépatique - HCC Explant Recurrence Score
     <div class="score" style="width: 100%;min-height: 2em;padding-top:10px">
       <p style="font-weight: bold;">Probabilité de récidive</p>
       <table class="table">
-        <tr><th>Score</th><th>1 ans</th><th>3 ans</th><th>5 ans</th></tr>
+        <tr><th>Score</th><th>1 an</th><th>3 ans</th><th>5 ans</th></tr>
         <tr><td id='result'></td><td id='result_1'></td><td id='result_3'></td><td id='result_5'></td></tr>
       </table>
     </div>
-<p class='ref'>Reference Costentin C. et al, 2016</p>
+<p class='ref'>D'après Costentin C. et al, ILTS 2016</p>
   </div>
 </div>
