Fixes CLIF-SOFA

--- a/scores/score_clif-sofa.html
+++ b/scores/score_clif-sofa.html
@@ -27,8 +27,9 @@ title: Unité de Transplantation Hépatique - Score CLIF-SOFA
       </fieldset>
       <fieldset>
         <legend>Encephalopathie stade 3-4</legend>
-        <input type="radio" name="encephal" value="non" id="non_encephal"><label for="non_encephal"><span><span></span></span>Non</label>
-        <input type="radio" name="encephal" value="oui" id="oui_encephal"><label for="oui_encephal"><span><span></span></span>Oui</label>
+        <input type="radio" name="encephal" value="low" id="low_encephal"><label for="low_encephal"><span><span></span></span>Absence</label>
+        <input type="radio" name="encephal" value="mid" id="mid_encephal"><label for="mid_encephal"><span><span></span></span>Stade 1-2</label>
+        <input type="radio" name="encephal" value="high" id="high_encephal"><label for="high_encephal"><span><span></span></span>Stade 3-4</label>
       </fieldset>
       <fieldset>
         <legend>Amines pressives/Terlipressine</legend>
