--- a/scores/score_meld.html
+++ b/scores/score_meld.html
@@ -8,7 +8,7 @@ title: Unité de Transplantation Hépatique - Score MELD
       <fieldset>
         <legend for="size">Serum Creatinine</legend>
         <input type="text" name="creat"><label for="creat">&micro;mol/L</label>
-        <input type="checkbox" name="dial"><label for="dial">Hemodialyse</label>
+        <input type="checkbox" name="dial" id='dial'><label for="dial"><span><span></span></span>Hemodialyse</label>
       </fieldset>
       <fieldset>
         <legend for="color">Serum Bilirubine</legend>
