--- a/scores/score_hepatite_fulminante.html
+++ b/scores/score_hepatite_fulminante.html
@@ -32,15 +32,15 @@ title: Unité de Transplantation Hépatique - Score Hépatite fulminante
       </fieldset>
       <fieldset>
         <legend>Facteur V</legend>
-        <input type="text" name="facteur" id="facteur"><label for="facteur">%</label>
+        <input type="number" name="facteur" id="facteur"><label for="facteur">%</label>
       </fieldset>
       <fieldset>
         <legend>Bilirubine</legend>
-        <input type="text" name="bili" id="bili"><label for="bili">&micro;mol/L</label>
+        <input type="number" name="bili" id="bili"><label for="bili">&micro;mol/L</label>
       </fieldset>
       <fieldset>
         <legend>Créatinine</legend>
-        <input type="text" name="creat" id="creat"><label for="creat">&micro;mol/L</label>
+        <input type="number" name="creat" id="creat"><label for="creat">&micro;mol/L</label>
       </fieldset>
       <fieldset>
         <legend>PH artériel</legend>
