--- a/scores/score_meld.html
+++ b/scores/score_meld.html
@@ -6,16 +6,16 @@ title: Unité de Transplantation Hépatique - Score MELD
     <h1>Score MELD</h1>
     <form name="score" class="score" action="javascript:calculateMELDScore()">
       <fieldset>
-        <legend for="size">Serum Creatinine</legend>
-        <input type="text" name="creat"><label for="creat">&micro;mol/L</label>
+        <legend>Serum Creatinine</legend>
+        <input type="number" name="creat"><label for="creat">&micro;mol/L</label>
         <input type="checkbox" name="dial" id='dial'><label for="dial"><span><span></span></span>Hemodialyse</label>
       </fieldset>
       <fieldset>
-        <legend for="color">Serum Bilirubine</legend>
-        <input type="text" name="bilirubin"><label for="bilirubin">&micro;mol/L</label>
+        <legend>Serum Bilirubine</legend>
+        <input type="number" name="bilirubin"><label for="bilirubin">&micro;mol/L</label>
       </fieldset>
       <fieldset>
-        <legend for="opinion">INR</legend>
+        <legend>INR</legend>
         <input type="text" name="inr">
       </fieldset>
       <input type="submit" value="Calculer">
