--- a/scores/score_afp.html
+++ b/scores/score_afp.html
@@ -29,4 +29,5 @@ title: Unité de Transplantation Hépatique - Score aFoetoProteines
     <div id="result"></div>
     </div>
   </div>
+<p class='ref'>D’après Duvoux C et al, Gastroenterology 2012 ;143:986-94</p>
 </div>
