--- a/scores/score_meld.html
+++ b/scores/score_meld.html
@@ -6,12 +6,12 @@ title: Unité de Transplantation Hépatique - Score MELD
     <h1>Score MELD</h1>
     <form name="score" class="score" action="javascript:calculateMELDScore()">
       <fieldset>
-        <legend>Serum Creatinine</legend>
+        <legend>Creatinine</legend>
         <input type="number" name="creat"><label for="creat">&micro;mol/L</label>
         <input type="checkbox" name="dial" id='dial'><label for="dial"><span><span></span></span>Hemodialyse</label>
       </fieldset>
       <fieldset>
-        <legend>Serum Bilirubine</legend>
+        <legend>Bilirubine</legend>
         <input type="number" name="bilirubin"><label for="bilirubin">&micro;mol/L</label>
       </fieldset>
       <fieldset>
