Changes PT to float

--- a/scores/score_lille.html
+++ b/scores/score_lille.html
@@ -27,7 +27,7 @@ title: Unité de Transplantation Hépatique - Score Lille
       </fieldset>
       <fieldset>
         <legend>Temps de prothrombine à J-0</legend>
-        <input type="number" name="pt"><label for="pt">sec</label>
+        <input type="text" name="pt"><label for="pt">sec</label>
       </fieldset>
       <input type="submit" value="Calculer">
     </form>
