--- a/scores/score_mayo_cbp.html
+++ b/scores/score_mayo_cbp.html
@@ -19,7 +19,7 @@ title: Unité de Transplantation Hépatique - Score Mayo Clinic CBP
       </fieldset>
       <fieldset>
         <legend>Temps de prothrombine</legend>
-        <input type="number" name="pt"><label for="pt">sec</label>
+        <input type="text" name="pt"><label for="pt">sec</label>
       </fieldset>
       <fieldset>
       	<legend>Score &OElig;demes</legend>
