--- a/scores/score_clif-sofa.html
+++ b/scores/score_clif-sofa.html
@@ -38,7 +38,7 @@ title: Unité de Transplantation Hépatique - Score CLIF-SOFA
       </fieldset>
       <input type="submit" value="Calculer">
     </form>
-    <div class="score" style="width: 100%;min-height: 2em;padding-top:10px">
+    <div class="score">
       <table class="table">
         <tr><th>Score</th><th>Probabilité de survie à 28 jours</th></tr>
         <tr><td id='result'></td><td id='result_1'></tr>
