--- a/scores/score_hepatite_fulminante.html
+++ b/scores/score_hepatite_fulminante.html
@@ -52,14 +52,15 @@ title: Unité de Transplantation Hépatique - Score Hépatite fulminante
       </fieldset>
       <input type="submit" value="Calculer">
     </form>
-    <div class="score" style="width: 100%;min-height: 2em;padding-top:10px"><p style="font-weight: bold;">Indication de greffe</p></div>
-    <div class="score" style="min-width:50%;">
-    Selon Clichy-Beaujon
-    <div id="result_clichy"></div>
-    </div>
-    <div class="score" style="min-width:50%;">
-    Selon King's College
-    <div id="result_kings"></div>
+    <div class="score"><p style="font-weight: bold;">Indication de greffe</p>
+      <div class="score" style="min-width:50%;">
+      Selon Clichy-Beaujon
+      <div id="result_clichy"></div>
+      </div>
+      <div class="score" style="min-width:50%;">
+      Selon King's College
+      <div id="result_kings"></div>
+      </div>
     </div>
   </div>
 </div>
