--- a/scores/score_hers.html
+++ b/scores/score_hers.html
@@ -29,7 +29,7 @@ title: Unité de Transplantation Hépatique - HCC Explant Recurrence Score
       <input type="submit" value="Calculer">
      </fieldset>
     </form>
-    <div class="score" style="width: 100%;min-height: 2em;padding-top:10px">
+    <div class="score">
       <p style="font-weight: bold;">Probabilité de récidive</p>
       <table class="table">
         <tr><th>Score</th><th>1 an</th><th>3 ans</th><th>5 ans</th></tr>
